# dwl

./: .gitignore  .gitmodules  Makefile  blur.h  build.sh  client.h  config.def.h  config.h  config.mk  dwl.c  dwl.h  meson.build  startup.sh  todo.md
dwl/: Makefile  client.h  colorscheme.h  config.h  dwl.c  dwl.h  meson.build  util.h  yoink.h
dwl_yoink/: meson.build  yoink.c
protocols/: dwl-ipc-unstable-v2.xml  dwl-yoink-unstable-v1.xml  meson.build
samples/: output-management.c
